@@ -2,18 +2,25 @@ package com.wizer.wizerlibrary.configuration;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
+import springfox.documentation.service.ApiKey;
+import springfox.documentation.service.AuthorizationScope;
+import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
+import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableSwagger2
-public class SwaggerConfiguration {
+public class SwaggerConfiguration implements WebMvcConfigurer {
 
     // WEBSITE IS - http://localhost:8080/swagger-ui/
 
@@ -22,6 +29,8 @@ public class SwaggerConfiguration {
         //Return a prepared Docket Instance
         return new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(apiDetails())
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(apiKey()))
                 .useDefaultResponseMessages(false)
                 .select()
                 .apis(RequestHandlerSelectors.basePackage("com.wizer.wizerlibrary"))
@@ -29,20 +38,44 @@ public class SwaggerConfiguration {
                 .build();
     }
 
+    @Override
+    public void addResourceHandlers(ResourceHandlerRegistry registry) {
+        registry
+                .addResourceHandler("swagger-ui/")
+                .addResourceLocations("classpath:/META-INF/resources/");
+        registry
+                .addResourceHandler("/webjars/**")
+                .addResourceLocations("classpath:/META-INF/resources/webjars/");
+    }
 
+    private SecurityContext securityContext() {
+        return SecurityContext.builder().securityReferences(defaultAuth()).build();
+    }
 
-    private ApiInfo apiDetails() {
-        return new ApiInfo(
-                "Library API",
-                "API for A Simple Library",
-                "1.0",
-                "Free to use",
-                new springfox.documentation.service.Contact("Francis", "", "fcoyiogu@gmail.com"),
-                "API License",
-                "",
-                Collections.emptyList()
-        );
+    private List<SecurityReference> defaultAuth() {
+        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
+        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
+        authorizationScopes[0] = authorizationScope;
+        return List.of(new SecurityReference("Bearer", authorizationScopes));
+    }
+
+    private ApiKey apiKey() {
+        return new ApiKey("Bearer", "Authorization", "header");
     }
 
 
-}
+    private ApiInfo apiDetails () {
+            return new ApiInfo(
+                    "Library API",
+                    "API for A Simple Library",
+                    "1.0",
+                    "Free to use",
+                    new springfox.documentation.service.Contact("Francis", "", "fcoyiogu@gmail.com"),
+                    "API License",
+                    "",
+                    Collections.emptyList()
+            );
+        }
+
+
+    }
